# rustle-plan

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  deny.toml  example_playbook.json
.claude/: settings.json
.claude/commands/: cleanup-tech-debt.md  commit-changes.md  commit-spec.md  coverage.md  create-spec.md  debug.md  implement-spec.md  lint.md
.claude/hooks/: notification
.github/: SECURITY.md
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
docs/: modular-architecture-design.md
git-hooks/: README.md  pre-commit
specs/: 000-specs-status.md  010-rustle-plan.md  020-caching-optimization.md  020-execution-monitoring.md  030-caching-optimization.md  030-target-architecture-detection.md  040-conditional-task-filtering.md  040-runtime-integration.md  050-advanced-analytics.md
src/: lib.rs
src/planner/: binary_deployment.rs  condition.rs  dependency.rs  error.rs  estimation.rs  execution_plan.rs  graph.rs  mod.rs  optimization.rs  strategy.rs  suitability.rs  validation.rs
src/types/: mod.rs  plan.rs  strategy.rs
tests/: cli_tests.rs  integration_tests.rs  parse_rustle_output.rs
tests/fixtures/: file_operations.json  file_operations_playbook_with_facts.json  package_management.json  rustle_parse_example_output.json  service_management.json  system_facts.json
